--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -279,7 +279,9 @@ cq-dropdown .content>.item.ciq-active:hover .ciq-switch,
 .ciq-radio.ciq-active span:after,
 .ciq-active>.ciq-switch,
 .ciq-switch:checked,
-.ciq-active>.ciq-switch:hover {
+.ciq-active>.ciq-switch:hover,
+html:not([ciq-last-interaction="touch"]) .ciq-context-menu div.ciq-switch-item.ciq-active:hover .ciq-switch,
+.ciq-context-menu div.ciq-switch-item.ciq-active .ciq-switch {
   /* biome-ignore lint/correctness/noUnknownFunction: theme() is required for dynamic Tailwind color */
   background: theme("colors.red-bean.500");
 }
@@ -321,10 +323,11 @@ cq-drawing-palette .ciq-mini-widget span[label],
 :host(cq-dropdown.ciq-night) .item.separator-item hr,
 .ciq-night cq-dropdown .item.separator-item hr,
 :host(cq-dropdown.ciq-day) .item.separator-item hr,
-.ciq-day cq-dropdown .item.separator-item hr {
+.ciq-day cq-dropdown .item.separator-item hr,
+cq-dialog.ciq-night hr,
+cq-dialog.ciq-day hr{
   border-bottom-color: var(--color-border-secondary-rice);
 }
-
 
 cq-dropdown .content>.item:not(:is(.separator-item, .heading-item, .template-item, .ciq-btn)):hover>*,
 cq-drawing-palette,
@@ -375,8 +378,21 @@ cq-side-panel {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
+  @apply diatype-xs-medium;
+  color: var(--color-primary-900)
 }
+
+html:not([ciq-last-interaction="touch"]) .ciq-night .ciq-context-menu div:hover {
+  background: var(--color-surface-tertiary-rice);
+
+}
+
+cq-dialog.ciq-night[cq-drawing-context], cq-dialog.ciq-night[cq-study-context], cq-dialog.ciq-night[cq-yaxis-context],
+cq-dialog.ciq-day[cq-drawing-context], cq-dialog.ciq-day[cq-study-context], cq-dialog.ciq-day[cq-yaxis-context] {
+  box-shadow: var(--shadow-card);
+}
+
 
 :host(cq-dropdown.ciq-night) .content,
 .ciq-night cq-dropdown .content,
@@ -416,6 +432,7 @@ cq-dialog.ciq-day {
   background: var(--color-surface-primary-rice);
   color: var(--color-primary-900);
   border-radius: 20px;
+  overflow: hidden
 }
 
 
