--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -204,6 +204,8 @@ cq-drawing-palette .tool-group .drawing-tools-group cq-separator {
 cq-drawing-palette cq-scroll {
   scrollbar-width: none;
   scrollbar-color: initial;
+  max-width: 65px;
+  margin: 0 auto;
 }
 
 cq-drawing-palette cq-scroll::-webkit-scrollbar {
