--- a/deploy/roles/clickhouse/templates/config.xml
+++ b/deploy/roles/clickhouse/templates/config.xml
@@ -89,4 +89,17 @@
     <asynchronous_metrics>true</asynchronous_metrics>
   </prometheus>
 
+  <storage_configuration>
+    <disks>
+      <backups>
+        <type>local</type>
+        <path>/var/log/clickhouse-server/backups/</path>
+      </backups>
+    </disks>
+  </storage_configuration>
+  <backups>
+    <allowed_disk>backups</allowed_disk>
+    <allowed_path>/var/log/clickhouse-server/backups/</allowed_path>
+  </backups>
+
 </clickhouse>
