--- a/ui/portal/web/public/global.css
+++ b/ui/portal/web/public/global.css
@@ -1,1 +1,34 @@
 @import "@left-curve/foundation/tailwind/global.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+
+  @media (min-height: 1000px) and (min-width: 1280px) {
+    div.custom-width {
+      width: calc(720px + (100vh - 1000px) * 0.8);
+    }
+  }
+
+  input:is(:-webkit-autofill, :autofill) {
+    /* biome-ignore lint/correctness/noUnknownFunction: theme() is required for dynamic Tailwind color */
+    -webkit-text-fill-color: theme('colors.secondary.700') !important;
+  }
+
+
+  .qr-container {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .max-h-available {
+    max-height: 100vh;
+    /* biome-ignore lint/suspicious/noDuplicateProperties: Adding browser-specific properties */
+    max-height: -moz-available;
+    max-height: -webkit-fill-available;
+    max-height: -webkit-stretch;
+  }
+}
