--- a/deploy/roles/full-app/templates/env.j2
+++ b/deploy/roles/full-app/templates/env.j2
@@ -10,3 +10,7 @@ DANGO_FRONTEND_PORT={{ dango_frontend_port }}
 DANGO_PORT={{ dango_port }}
 FAUCET_PORT={{ faucet_port }}
 QUEST_PORT={{ quest_port }}
+COMETBFT_P2P_PORT={{ cometbft_p2p_port }}
+COMETBFT_RPC_PORT={{ cometbft_rpc_port }}
+COMETBFT_ABCI_PORT={{ cometbft_abci_port }}
+COMETBFT_METRICS_PORT={{ cometbft_metrics_port }}
