--- a/deploy/roles/full-app/templates/env.j2
+++ b/deploy/roles/full-app/templates/env.j2
@@ -8,6 +8,7 @@ QUEST_URL=http://{{ tailscale_ip }}:{{ quest_port }}/check_username
 UP_URL=http://{{ tailscale_ip }}:{{ dango_port }}/up
 DANGO_FRONTEND_PORT={{ dango_frontend_port }}
 DANGO_PORT={{ dango_port }}
+DANGO_METRICS_PORT={{ dango_metrics_port }}
 FAUCET_PORT={{ faucet_port }}
 QUEST_PORT={{ quest_port }}
 COMETBFT_P2P_PORT={{ cometbft_p2p_port }}
