--- a/deploy/roles/full-app/templates/env.j2
+++ b/deploy/roles/full-app/templates/env.j2
@@ -1,4 +1,4 @@
-DANGO_TAG={{ lookup('pipe','git rev-parse HEAD') }}
+DANGO_TAG={{ dango_image_tag }}
 INDEXER__DATABASE__URL=postgres://postgres:{{ db_password }}@db:5432/dango_prod
 INDEXER__CLICKHOUSE__PASSWORD={{ clickhouse_password }}
 FAUCET_VERSION=latest
