--- a/deploy/roles/full-app/templates/env.j2
+++ b/deploy/roles/full-app/templates/env.j2
@@ -6,12 +6,13 @@ INDEXER_URL=http://{{ tailscale_ip }}:{{ dango_port }}/graphql
 FAUCET_URL=http://{{ tailscale_ip }}:{{ faucet_port }}/mint
 QUEST_URL=http://{{ tailscale_ip }}:{{ quest_port }}/check_username
 UP_URL=http://{{ tailscale_ip }}:{{ dango_port }}/up
+{% if expose_ports %}
 DANGO_FRONTEND_PORT={{ dango_frontend_port }}
 DANGO_PORT={{ dango_port }}
 DANGO_METRICS_PORT={{ dango_metrics_port }}
 FAUCET_PORT={{ faucet_port }}
-QUEST_PORT={{ quest_port }}
 COMETBFT_P2P_PORT={{ cometbft_p2p_port }}
 COMETBFT_RPC_PORT={{ cometbft_rpc_port }}
 COMETBFT_ABCI_PORT={{ cometbft_abci_port }}
 COMETBFT_METRICS_PORT={{ cometbft_metrics_port }}
+{% endif %}
