--- a/deploy/roles/full-app/templates/env.j2
+++ b/deploy/roles/full-app/templates/env.j2
@@ -11,6 +11,7 @@ DANGO_FRONTEND_PORT={{ dango_frontend_port }}
 DANGO_PORT={{ dango_port }}
 DANGO_METRICS_PORT={{ dango_metrics_port }}
 FAUCET_PORT={{ faucet_port }}
+QUEST_PORT={{ quest_port }}
 COMETBFT_P2P_PORT={{ cometbft_p2p_port }}
 COMETBFT_RPC_PORT={{ cometbft_rpc_port }}
 COMETBFT_ABCI_PORT={{ cometbft_abci_port }}
