--- a/deploy/roles/full-app/templates/env.j2
+++ b/deploy/roles/full-app/templates/env.j2
@@ -7,6 +7,7 @@ FAUCET_URL=http://{{ tailscale_ip }}:{{ faucet_port }}/mint
 QUEST_URL=http://{{ tailscale_ip }}:{{ quest_port }}/check_username
 UP_URL=http://{{ tailscale_ip }}:{{ dango_port }}/up
 {% if expose_ports %}
+DB_METRICS_PORT={{ db_metrics_port }}
 DANGO_FRONTEND_PORT={{ dango_frontend_port }}
 DANGO_PORT={{ dango_port }}
 DANGO_METRICS_PORT={{ dango_metrics_port }}
